# prc-web

./: Cargo.toml  README.md  bootstrap.js  package-lock.json  package.json  webpack.config.js
src/: app.rs  etc.prc  lib.rs
src/components/: mod.rs  tree.rs
static/: index.css  index.html
