[package]
name = "prc-web"
version = "0.1.0"
authors = [
  "Benjamin Hall <Benjaminjahall@gmail.com",
  "Justin Starry <justin.starry@icloud.com"
]
description = "Online prc filetype viewer and editor"
repository = "https://github.com/BenHall-7/prc-web"
edition = "2018"

[lib]
crate-type = ["cdylib"]

[dependencies]
prc-rs = { git = "https://github.com/ultimate-research/prc-rs.git", rev = "e1e9328f142517fd383c4dd90c39228f48681ce7" }
wasm-bindgen = "^0.2"
yew = { version = "^0.14", features = [ "web_sys" ] }
web-sys = { version = "0.3.4", features = [ "KeyboardEvent" ] }